Add commented security manager options