@@ -230,6 +230,8 @@
 								<argument>-Dcom.sun.management.jmxremote.port=7900</argument>
 								<argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
 								<argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
+								<!-- <argument>-Djava.security.manager</argument>
+								<argument>-Djava.security.policy=catalina.policy</argument> -->
 								<argument>-ea</argument>
 								<argument>-jar</argument>
 								<argument>target/easybuggy.jar</argument>
